--- a/merch/src/components/AdvantagesBlock/style.css
+++ b/merch/src/components/AdvantagesBlock/style.css
@@ -11,143 +11,97 @@ body {
     background-color: #FAFAFA;
 }
 
-
-
 #ouradv {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 2em 1em;
+    padding: 1.5em 1em; 
     text-align: center;
 }
 
 .header-advblock {
-    font-size: 3em;
+    font-size: 2.2em;
     font-weight: bold;
-    margin-bottom: 1em;
-    text-align: left;
-    margin-left: -2em;
+    margin-bottom: 0.8em; 
+    text-align: center;
+    margin-top: 0.5em;
 }
 
 .advantage-block {
     display: flex;
-    justify-content: space-between;
-    gap: 2em;
-    margin-top: 2em;
-    flex-wrap: wrap;
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em; 
+    margin-top: 1em; 
+    margin-bottom: 1em;
 }
 
-.card, .cardthird {
+.card, .cardsecond, .cardthird {
     width: 100%;
+    max-width: 90%;
     text-align: center;
 }
 
-.card {
-    max-width: 16.2em;
+.card{
+    margin-left: -0.7em;
 }
 
-.cardthird {
-    max-width: 19em;
+.cardsecond{
+    margin-left: -0.5em;
+}
+
+.cardthird{
+    margin-left: -0.5em;
 }
 
 .headerblock-advblock {
-    font-size: 1.3em;
+    font-size: 1.1em;
     font-weight: bold;
-    margin: 1em 0 0.5em;
+    margin: 0.8em 0 0.5em; 
     text-align: left;
 }
 
 .textmain-advblock {
-    font-size: 1.3em;
-    margin: 0.5em 0;
+    font-size: 1.1em;
+    margin: 0.3em 0; 
     text-align: left;
 }
 
 .text-advblock {
-    font-size: 0.85em;
+    font-size: 0.75em;
     color: #555;
     font-style: italic;
     text-align: left;
-    margin-top: 2em;
+    margin-top: 1.5em; 
 }
 
 .img-icon {
     display: flex;
-    justify-content: center;
-    gap: 20em;  
-    margin-top: -1em;
-    margin-left: 3em;
-    margin-bottom: 2em;
+    flex-direction: column;
+    align-items: center;
+    gap: 2em; 
+    margin-top: 1em; 
 }
 
-.icon, .iconsecond, .iconthird {
-    width: 8em;
-    height: 8em;
-    display: inline-block;
+.icon{
+    width: 7em;
+    height: 7em;
+    margin-top: 2em;
+    margin-left: 6em;
 }
 
-.iconsecond {
-    margin-left: -0.5em;
+.iconsecond{
+    width: 7em;
+    height: 7em;
+    margin-top: 2.5em;
+    margin-left: 6em;
 }
 
-.iconthird {
-    margin-left: 1em;
-}
-
-
-
-
-@media (max-width: 768px) {
-    #ouradv {
-        padding: 2em 0.5em;
-    }
-
-    .header-advblock {
-        font-size: 2.2em;
-        margin-left: 0;
-    }
-
-    .advantage-block {
-        gap: 1.5em;
-        justify-content: center;
-    }
-
-    .card, .cardthird {
-        max-width: 90%;
-    }
-
-    .headerblock-advblock {
-        font-size: 1.1em;
-    }
-
-    .textmain-advblock {
-        font-size: 1.1em;
-    }
-
-    .text-advblock {
-        font-size: 0.75em;
-    }
-
-    .img-icon {
-        flex-direction: column;
-        margin-left: 0;
-        margin-top: 1.5em;
-        gap: 3em;
-    }
-
-    .icon {
-        width: 6em;
-        height: 6em;
-    }
-
-    .iconsecond {
-        margin-left: 0;
-    }
-
-    .iconthird {
-        margin-left: 0;
-    }
+.iconthird{
+    width: 7em;
+    height: 7em;
+    margin-top: 1.5em;
+    margin-left: 6em;
 }
 
 
@@ -158,11 +112,13 @@ body {
     }
 
     .advantage-block {
-        gap: 2em;
+        flex-direction: row;
+        gap: 1.5em; 
         justify-content: space-between;
     }
 
     .card, .cardthird {
+        width: 45%;
         max-width: 45%;
     }
 
@@ -179,9 +135,10 @@ body {
     }
 
     .img-icon {
-        gap: 10em;
+        flex-direction: row;
+        justify-content: space-around;
+        gap: 8em; 
         margin-top: 1em;
-        margin-left: 1em;
     }
 
     .icon {
@@ -189,11 +146,87 @@ body {
         height: 7em;
     }
 
-    .iconsecond {
+    .iconsecond,
+    .iconthird {
         margin-left: 0;
+    }
+}
+
+
+
+
+
+@media (min-width: 1025px) {
+    .header-advblock {
+        font-size: 3em;
+        text-align: left;
+        margin-left: -2em;
+        margin-top: 1em;
+    }
+
+    .advantage-block {
+        max-width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-between;
+        gap: 1em;
+        margin-top: 2em;
+        margin-bottom: 4em;
+    }
+
+    .card {
+        max-width: 16.2em;
+    }
+
+    .cardsecond {
+        max-width: 16.2em;
+        margin-left: 9em;
+    }
+
+    .cardthird {
+        max-width: 19em;
+        margin-left: 9em;
+    }
+
+    .headerblock-advblock {
+        font-size: 1.3em;
+    }
+
+    .textmain-advblock {
+        font-size: 1.3em;
+    }
+
+    .text-advblock {
+        font-size: 0.85em;
+    }
+
+    .img-icon {
+        flex-direction: row;
+        justify-content: center;
+        gap: 15em; 
+        margin-top: -1em;
+        margin-bottom: 2em;
+    }
+
+    .icon {
+        width: 9em;
+        height: 9em;
+        margin-top: 3.4em;
+        margin-left: 2.5em; 
+    }
+
+    .iconsecond {
+        width: 9em;
+        height: 9em;
+        margin-left: 2.5em;
+        margin-top: 6em;
     }
 
     .iconthird {
-        margin-left: 0;
+        width: 9em;
+        height: 9em;
+        margin-left: 4em;
+        margin-top: 2.2em;
     }
 }
