--- a/merch/src/components/MainBlock/style.css
+++ b/merch/src/components/MainBlock/style.css
@@ -9,18 +9,16 @@ body {
     margin: 0;
     padding: 0;
     background-color: #FAFAFA;
-    overflow-x: hidden; 
 }
-
-
 
 #mainblock {
     position: relative;
     width: 100%;
-    height: 110vh; 
+    height: 95vh;
     background-image: url('./src/assets/img/bg-main.jpg');
     background-size: cover;
-    background-position: center;
+    background-position: center center; /* Центрування зображення */
+    background-repeat: no-repeat; /* Фон не повторюється */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -34,29 +32,24 @@ body {
     width: 35em;
     height: auto;
     margin-left: 4.5em;
-    margin-top: 4.5em;
-    margin-bottom: 4.5em; 
 }
-
-
 
 .content-main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
 
 .header-main-block {
-    font-size: 3em;
-    line-height: 1.1em;
+    font-size: 5em;
+    line-height: 0.85em;
     font-weight: bold;
-    margin-top: 0.8em;
+    margin-top: 0;
 }
 
 .text-main-block {
-    width: 90%;
-    font-size: 1.6em;
+    width: 18em;
+    font-size: 2.4em;
     line-height: 1.5;
     margin: 0.42em 0 1.3em;
     font-weight: 400;
@@ -68,12 +61,12 @@ body {
 }
 
 .btn-main-block {
-    font-size: 1.3em;
+    font-size: 1.5em;
     font-weight: bold;
     color: #FAFAFA;
     background-color: #FFA800;
     border: none;
-    padding: 0.75em 2em;
+    padding: 0.9375em 2.5em;
     border-radius: 1.5em;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -84,6 +77,37 @@ body {
     background-color: #e59500cd;
 }
 
+/* Мобільна версія */
+@media (max-width: 768px) {
+    #mainblock {
+        flex-direction: column;
+        height: auto;
+        padding: 3em 1em;
+    }
+
+    .img-main-block {
+        width: 90%;
+        margin-left: 0;
+        max-width: 25em;
+    }
+
+    .header-main-block {
+        font-size: 3em;
+        line-height: 1.1em;
+        margin-top: 0.8em;
+    }
+
+    .text-main-block {
+        width: 90%;
+        font-size: 1.6em;
+        margin: 0.42em 0 1.3em;
+    }
+
+    .btn-main-block {
+        font-size: 1.3em;
+        padding: 0.75em 2em;
+    }
+}
 
 /* Планшетна версія */
 @media (min-width: 769px) and (max-width: 1024px) {
@@ -91,15 +115,12 @@ body {
         flex-direction: row;
         height: 80vh;
         background-image: url('./src/assets/img/bg-main.jpg');
-        padding: 2em 0; 
     }
 
     .img-main-block {
-        width: 70%; 
+        width: 80%;
         margin-left: 2em;
-        margin-top: 2em; 
-        margin-bottom: 2em; 
-        max-width: 30em; 
+        max-width: 30em;
     }
 
     .header-main-block {
@@ -108,7 +129,7 @@ body {
     }
 
     .text-main-block {
-        width: 70%;
+        width: 22em;
         font-size: 2em;
     }
 
@@ -119,21 +140,22 @@ body {
 }
 
 /* Десктопна версія */
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
     #mainblock {
+        max-width: 100%;
         flex-direction: row;
         height: 95vh;
         background-image: url('./src/assets/img/bg-main.jpg');
-        padding: 0 2em; 
+        padding: 0 2em;
     }
 
     .img-main-block {
         max-width: 35em;
         width: 100%;
         height: auto;
-        margin-left: 2em; 
-        margin-top: 2em; 
-        object-fit: cover; 
+        margin-left: 2em;
+        margin-top: 2em;
+        object-fit: cover;
     }
 
     .header-main-block {
